Fixed profile header z-index

--- a/src/_components/user-profile/user-profile.component.less
+++ b/src/_components/user-profile/user-profile.component.less
@@ -25,6 +25,7 @@ div#profile-background-photo {
     margin-top: 200px;
     padding-top: 40px;
     padding-bottom: 40px;
+    z-index: 1;
     .profile-top {
         margin-left: 0;
         margin-right: 0;
